# llm-repl

./: .gitignore  INSTALL.md  LICENSE  README.md  REVIEW.md  pyproject.toml  setup.py
examples/: programmatic_usage.py  sample_notebook.llmn
src/llm_repl/: __init__.py  __main__.py  cells.py  cli.py  llm.py  notebook.py
tests/: test_notebook.py
web_ui/: .gitignore  README.md  start.py
web_ui/backend/: README.md  app.py  requirements.txt
web_ui/frontend/: README.md  package-lock.json  package.json
web_ui/frontend/public/: index.html  manifest.json
web_ui/frontend/src/: App.js  config.js  index.css  index.js
web_ui/frontend/src/components/: Cell.js  Header.js  Notebook.js  NotebookList.js
web_ui/frontend/src/contexts/: NotebookContext.js
web_ui/frontend/src/services/: api.js
