[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-repl"
version = "0.1.0"
description = "A REPL-first approach to LLM interactions, inspired by Jupyter notebooks"
readme = "README.md"
authors = [
    {name = "CGAST"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0",
    "rich>=10.0.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0",
    "ipython>=8.0.0",
    "jupyter-client>=7.0.0",
    "nbformat>=5.0.0",
]

[project.scripts]
llm-repl = "llm_repl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
